src/gobapi/graphql_streaming/graphql2sql/grammar/GraphQLParser.py
# Generated from gobapi/graphql_streaming/graphql2sql/grammar/GraphQL.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class GraphQLParser ( Parser ):

    grammarFileName = "GraphQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "','", "'}'", "'query'", "'mutation'", 
                     "':'", "'('", "')'", "'...'", "'on'", "'fragment'", 
                     "'@'", "'$'", "'='", "'['", "']'", "'!'", "<INVALID>", 
                     "<INVALID>", "'sort'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING", "BOOLEAN", "SORT", 
                      "NAME", "NUMBER", "WS" ]

    RULE_document = 0
    RULE_definition = 1
    RULE_operationDefinition = 2
    RULE_selectionSet = 3
    RULE_operationType = 4
    RULE_selection = 5
    RULE_field = 6
    RULE_fieldName = 7
    RULE_alias = 8
    RULE_arguments = 9
    RULE_argument = 10
    RULE_fragmentSpread = 11
    RULE_inlineFragment = 12
    RULE_fragmentDefinition = 13
    RULE_fragmentName = 14
    RULE_directives = 15
    RULE_directive = 16
    RULE_typeCondition = 17
    RULE_variableDefinitions = 18
    RULE_variableDefinition = 19
    RULE_variable = 20
    RULE_defaultValue = 21
    RULE_valueOrVariable = 22
    RULE_value = 23
    RULE_ttype = 24
    RULE_typeName = 25
    RULE_listType = 26
    RULE_nonNullType = 27
    RULE_nameArray = 28
    RULE_array = 29

    ruleNames =  [ "document", "definition", "operationDefinition", "selectionSet", 
                   "operationType", "selection", "field", "fieldName", "alias", 
                   "arguments", "argument", "fragmentSpread", "inlineFragment", 
                   "fragmentDefinition", "fragmentName", "directives", "directive", 
                   "typeCondition", "variableDefinitions", "variableDefinition", 
                   "variable", "defaultValue", "valueOrVariable", "value", 
                   "ttype", "typeName", "listType", "nonNullType", "nameArray", 
                   "array" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    STRING=18
    BOOLEAN=19
    SORT=20
    NAME=21
    NUMBER=22
    WS=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphQLParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(GraphQLParser.DefinitionContext,i)


        def getRuleIndex(self):
            return GraphQLParser.RULE_document

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = GraphQLParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.definition()
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GraphQLParser.T__0) | (1 << GraphQLParser.T__3) | (1 << GraphQLParser.T__4) | (1 << GraphQLParser.T__10))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operationDefinition(self):
            return self.getTypedRuleContext(GraphQLParser.OperationDefinitionContext,0)


        def fragmentDefinition(self):
            return self.getTypedRuleContext(GraphQLParser.FragmentDefinitionContext,0)


        def getRuleIndex(self):
            return GraphQLParser.RULE_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = GraphQLParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQLParser.T__0, GraphQLParser.T__3, GraphQLParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.operationDefinition()
                pass
            elif token in [GraphQLParser.T__10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.fragmentDefinition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectionSet(self):
            return self.getTypedRuleContext(GraphQLParser.SelectionSetContext,0)


        def operationType(self):
            return self.getTypedRuleContext(GraphQLParser.OperationTypeContext,0)


        def NAME(self):
            return self.getToken(GraphQLParser.NAME, 0)

        def variableDefinitions(self):
            return self.getTypedRuleContext(GraphQLParser.VariableDefinitionsContext,0)


        def directives(self):
            return self.getTypedRuleContext(GraphQLParser.DirectivesContext,0)


        def getRuleIndex(self):
            return GraphQLParser.RULE_operationDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperationDefinition" ):
                return visitor.visitOperationDefinition(self)
            else:
                return visitor.visitChildren(self)




    def operationDefinition(self):

        localctx = GraphQLParser.OperationDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_operationDefinition)
        self._la = 0 # Token type
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQLParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.selectionSet()
                pass
            elif token in [GraphQLParser.T__3, GraphQLParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.operationType()
                self.state = 71
                self.match(GraphQLParser.NAME)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GraphQLParser.T__6:
                    self.state = 72
                    self.variableDefinitions()


                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GraphQLParser.T__11:
                    self.state = 75
                    self.directives()


                self.state = 78
                self.selectionSet()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphQLParser.SelectionContext)
            else:
                return self.getTypedRuleContext(GraphQLParser.SelectionContext,i)


        def getRuleIndex(self):
            return GraphQLParser.RULE_selectionSet

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectionSet" ):
                return visitor.visitSelectionSet(self)
            else:
                return visitor.visitChildren(self)




    def selectionSet(self):

        localctx = GraphQLParser.SelectionSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_selectionSet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(GraphQLParser.T__0)
            self.state = 83
            self.selection()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GraphQLParser.T__1) | (1 << GraphQLParser.T__8) | (1 << GraphQLParser.NAME))) != 0):
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GraphQLParser.T__1:
                    self.state = 84
                    self.match(GraphQLParser.T__1)


                self.state = 87
                self.selection()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(GraphQLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GraphQLParser.RULE_operationType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperationType" ):
                return visitor.visitOperationType(self)
            else:
                return visitor.visitChildren(self)




    def operationType(self):

        localctx = GraphQLParser.OperationTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operationType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not(_la==GraphQLParser.T__3 or _la==GraphQLParser.T__4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field(self):
            return self.getTypedRuleContext(GraphQLParser.FieldContext,0)


        def fragmentSpread(self):
            return self.getTypedRuleContext(GraphQLParser.FragmentSpreadContext,0)


        def inlineFragment(self):
            return self.getTypedRuleContext(GraphQLParser.InlineFragmentContext,0)


        def getRuleIndex(self):
            return GraphQLParser.RULE_selection

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelection" ):
                return visitor.visitSelection(self)
            else:
                return visitor.visitChildren(self)




    def selection(self):

        localctx = GraphQLParser.SelectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_selection)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.field()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.fragmentSpread()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.inlineFragment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldName(self):
            return self.getTypedRuleContext(GraphQLParser.FieldNameContext,0)


        def arguments(self):
            return self.getTypedRuleContext(GraphQLParser.ArgumentsContext,0)


        def directives(self):
            return self.getTypedRuleContext(GraphQLParser.DirectivesContext,0)


        def selectionSet(self):
            return self.getTypedRuleContext(GraphQLParser.SelectionSetContext,0)


        def getRuleIndex(self):
            return GraphQLParser.RULE_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField" ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = GraphQLParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.fieldName()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GraphQLParser.T__6:
                self.state = 103
                self.arguments()


            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GraphQLParser.T__11:
                self.state = 106
                self.directives()


            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GraphQLParser.T__0:
                self.state = 109
                self.selectionSet()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alias(self):
            return self.getTypedRuleContext(GraphQLParser.AliasContext,0)


        def NAME(self):
            return self.getToken(GraphQLParser.NAME, 0)

        def getRuleIndex(self):
            return GraphQLParser.RULE_fieldName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldName" ):
                return visitor.visitFieldName(self)
            else:
                return visitor.visitChildren(self)




    def fieldName(self):

        localctx = GraphQLParser.FieldNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fieldName)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.alias()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(GraphQLParser.NAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(GraphQLParser.NAME)
            else:
                return self.getToken(GraphQLParser.NAME, i)

        def getRuleIndex(self):
            return GraphQLParser.RULE_alias

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlias" ):
                return visitor.visitAlias(self)
            else:
                return visitor.visitChildren(self)




    def alias(self):

        localctx = GraphQLParser.AliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(GraphQLParser.NAME)
            self.state = 117
            self.match(GraphQLParser.T__5)
            self.state = 118
            self.match(GraphQLParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphQLParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(GraphQLParser.ArgumentContext,i)


        def getRuleIndex(self):
            return GraphQLParser.RULE_arguments

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = GraphQLParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(GraphQLParser.T__6)
            self.state = 121
            self.argument()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GraphQLParser.T__1:
                self.state = 122
                self.match(GraphQLParser.T__1)
                self.state = 123
                self.argument()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(GraphQLParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SORT(self):
            return self.getToken(GraphQLParser.SORT, 0)

        def NAME(self):
            return self.getToken(GraphQLParser.NAME, 0)

        def nameArray(self):
            return self.getTypedRuleContext(GraphQLParser.NameArrayContext,0)


        def valueOrVariable(self):
            return self.getTypedRuleContext(GraphQLParser.ValueOrVariableContext,0)


        def getRuleIndex(self):
            return GraphQLParser.RULE_argument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = GraphQLParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_argument)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(GraphQLParser.SORT)
                self.state = 132
                self.match(GraphQLParser.T__5)
                self.state = 133
                self.match(GraphQLParser.NAME)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(GraphQLParser.SORT)
                self.state = 135
                self.match(GraphQLParser.T__5)
                self.state = 136
                self.nameArray()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.match(GraphQLParser.NAME)
                self.state = 138
                self.match(GraphQLParser.T__5)
                self.state = 139
                self.valueOrVariable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FragmentSpreadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fragmentName(self):
            return self.getTypedRuleContext(GraphQLParser.FragmentNameContext,0)


        def directives(self):
            return self.getTypedRuleContext(GraphQLParser.DirectivesContext,0)


        def getRuleIndex(self):
            return GraphQLParser.RULE_fragmentSpread

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFragmentSpread" ):
                return visitor.visitFragmentSpread(self)
            else:
                return visitor.visitChildren(self)




    def fragmentSpread(self):

        localctx = GraphQLParser.FragmentSpreadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_fragmentSpread)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(GraphQLParser.T__8)
            self.state = 143
            self.fragmentName()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GraphQLParser.T__11:
                self.state = 144
                self.directives()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineFragmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeCondition(self):
            return self.getTypedRuleContext(GraphQLParser.TypeConditionContext,0)


        def selectionSet(self):
            return self.getTypedRuleContext(GraphQLParser.SelectionSetContext,0)


        def directives(self):
            return self.getTypedRuleContext(GraphQLParser.DirectivesContext,0)


        def getRuleIndex(self):
            return GraphQLParser.RULE_inlineFragment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInlineFragment" ):
                return visitor.visitInlineFragment(self)
            else:
                return visitor.visitChildren(self)




    def inlineFragment(self):

        localctx = GraphQLParser.InlineFragmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_inlineFragment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(GraphQLParser.T__8)
            self.state = 148
            self.match(GraphQLParser.T__9)
            self.state = 149
            self.typeCondition()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GraphQLParser.T__11:
                self.state = 150
                self.directives()


            self.state = 153
            self.selectionSet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FragmentDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fragmentName(self):
            return self.getTypedRuleContext(GraphQLParser.FragmentNameContext,0)


        def typeCondition(self):
            return self.getTypedRuleContext(GraphQLParser.TypeConditionContext,0)


        def selectionSet(self):
            return self.getTypedRuleContext(GraphQLParser.SelectionSetContext,0)


        def directives(self):
            return self.getTypedRuleContext(GraphQLParser.DirectivesContext,0)


        def getRuleIndex(self):
            return GraphQLParser.RULE_fragmentDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFragmentDefinition" ):
                return visitor.visitFragmentDefinition(self)
            else:
                return visitor.visitChildren(self)




    def fragmentDefinition(self):

        localctx = GraphQLParser.FragmentDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_fragmentDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(GraphQLParser.T__10)
            self.state = 156
            self.fragmentName()
            self.state = 157
            self.match(GraphQLParser.T__9)
            self.state = 158
            self.typeCondition()
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GraphQLParser.T__11:
                self.state = 159
                self.directives()


            self.state = 162
            self.selectionSet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FragmentNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(GraphQLParser.NAME, 0)

        def getRuleIndex(self):
            return GraphQLParser.RULE_fragmentName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFragmentName" ):
                return visitor.visitFragmentName(self)
            else:
                return visitor.visitChildren(self)




    def fragmentName(self):

        localctx = GraphQLParser.FragmentNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_fragmentName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(GraphQLParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectivesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphQLParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(GraphQLParser.DirectiveContext,i)


        def getRuleIndex(self):
            return GraphQLParser.RULE_directives

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirectives" ):
                return visitor.visitDirectives(self)
            else:
                return visitor.visitChildren(self)




    def directives(self):

        localctx = GraphQLParser.DirectivesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_directives)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 166
                self.directive()
                self.state = 169 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==GraphQLParser.T__11):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(GraphQLParser.NAME, 0)

        def valueOrVariable(self):
            return self.getTypedRuleContext(GraphQLParser.ValueOrVariableContext,0)


        def argument(self):
            return self.getTypedRuleContext(GraphQLParser.ArgumentContext,0)


        def getRuleIndex(self):
            return GraphQLParser.RULE_directive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirective" ):
                return visitor.visitDirective(self)
            else:
                return visitor.visitChildren(self)




    def directive(self):

        localctx = GraphQLParser.DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_directive)
        try:
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(GraphQLParser.T__11)
                self.state = 172
                self.match(GraphQLParser.NAME)
                self.state = 173
                self.match(GraphQLParser.T__5)
                self.state = 174
                self.valueOrVariable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.match(GraphQLParser.T__11)
                self.state = 176
                self.match(GraphQLParser.NAME)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.match(GraphQLParser.T__11)
                self.state = 178
                self.match(GraphQLParser.NAME)
                self.state = 179
                self.match(GraphQLParser.T__6)
                self.state = 180
                self.argument()
                self.state = 181
                self.match(GraphQLParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeConditionContext(ParserRuleContext):
